# broguelike

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
raws/: spawns.json
src/: bystander_ai_system.rs  camera.rs  components.rs  damage_system.rs  gamesystem.rs  gui.rs  hunger_system.rs  inventory_system.rs  items.rs  lib.rs  lighting_system.rs  main.rs  map.rs  melee_combat_system.rs  monster_ai_system.rs  movement_system.rs  particle_system.rs  player.rs  random_table.rs  random_tables.rs  render.rs  rex_assets.rs  saveload_system.rs  spawner.rs  states.rs  systems.rs  trigger_system.rs  visibility_system.rs
src/ai/: adjacent_ai_system.rs  approach_ai_system.rs  chase_ai_system.rs  default_move_system.rs  encumbrance_system.rs  flee_ai_system.rs  initiative_system.rs  quipping.rs  turn_status.rs  visible_ai_system.rs
src/combat/: damage_system.rs  melee_system.rs  mod.rs
src/effects/: damage.rs  mod.rs  particles.rs  targeting.rs  triggers.rs
src/inventory_system/: collection_system.rs  drop_system.rs  equip_use.rs  identification_system.rs  item_drop_system.rs  item_identification_system.rs  item_remove_system.rs  item_use_system.rs  mod.rs  remove_system.rs  use_system.rs
src/map/: dungeon.rs  indexing_system.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: area_ending_point.rs  area_starting_points.rs  bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  cull_unreachable.rs  distant_exit.rs  dla.rs  door_placement.rs  drunkard.rs  forest.rs  limestone_cavern.rs  maze.rs  mod.rs  room_based_spawner.rs  room_draw.rs  (+14 more)
(+18 files in other folders)
