[package]
name = "broguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bracket-lib = { version = "0.8", features = ["serde"] }
specs = { version = "0.17", features = ["serde"] }
specs-derive = "~0.4"
serde = { version = "^1.0.44", features = ["derive"] }
serde_json = "~1.0"
lazy_static = "1.4.0"
regex = "1.5.5"